# gohtmx

./: .gitignore  Makefile  README.md  coverage  go.mod  layout.html  service.go  service_test.go
go/: Makefile  layout.html  main.go  service.go  service_test.go
rust/: Cargo.toml
rust/src/: content.html  layout.html  main.rs  service.rs
